--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,10 +38,17 @@ category = "Game"
 osx_minimum_system_version = "10.12"
 
 [features]
-default = ["default-base", "backend-sdl", "render-opengl", "exe", "webbrowser", "discord-rpc"]
+default = ["default-base", "backend-sdl", "render-opengl", "exe", "webbrowser", "discord-rpc", "sdl2-bundled"]
 default-base = ["ogg-playback"]
 ogg-playback = ["lewton"]
 backend-sdl = ["sdl2", "sdl2-sys"]
+# Use bundled SDL2 (default). Mutually exclusive with sdl2-system.
+sdl2-bundled = ["sdl2/bundled", "sdl2/static-link", "sdl2-sys/bundled", "sdl2-sys/static-link"]
+# Use system SDL2 via pkg-config (for Linux ARM64 handhelds with Mali, etc.).
+sdl2-system = ["sdl2/use-pkgconfig", "sdl2-sys/use-pkgconfig"]
+# SDL 2.0.12 compatibility: avoid SDL 2.0.18 APIs (RenderGeometry, GameControllerTypeForIndex).
+# Use with sdl2-system when targeting older SDL. Requires OpenGL to work (SDL2 renderer fallback disabled).
+sdl2-minimum = []
 backend-glutin = ["winit", "glutin", "render-opengl"]
 backend-horizon = []
 render-opengl = []
@@ -78,8 +85,8 @@ num-derive = "0.3"
 num-traits = "0.2"
 paste = "1.0"
 pelite = { version = ">=0.9.2", default-features = false, features = ["std"] }
-sdl2 = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "244ae85833cff4f97ab4b58331741be20e422bd7", optional = true, features = ["unsafe_textures", "bundled", "static-link"] }
-sdl2-sys = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "244ae85833cff4f97ab4b58331741be20e422bd7", optional = true, features = ["bundled", "static-link"] }
+sdl2 = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "244ae85833cff4f97ab4b58331741be20e422bd7", optional = true, features = ["unsafe_textures"] }
+sdl2-sys = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "244ae85833cff4f97ab4b58331741be20e422bd7", optional = true }
 rc-box = "1.2.0"
 serde = { version = "1", features = ["derive"] }
 serde_derive = "1"
